# alemno-payments

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: lint.yml
app/: main.py  worker.py
app/api/v1/: jobs.py
app/clients/: exchange_rate_client.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py
app/db/: session.py
app/db/models/: __init__.py  job.py  job_summary.py  transaction.py
app/repositories/: __init__.py  job_repository.py
app/schemas/: __init__.py  job.py
app/services/: job_service.py
app/utils/: csv_parser.py
tests/: conftest.py
tests/api/: test_jobs_api.py
tests/repositories/: test_job_repository.py
tests/services/: test_csv_parser.py  test_exchange_rate.py
